2017-03-11  Michal Hoftich  <michal.h21@gmail.com>

	* tex4ht-html4.tex (html4.4ht), 
	* tex4ht-4ht.tex (graphics.4ht): Fixed support for images with spaces
	in their filenames

2017-03-11  Michal Hoftich  <michal.h21@gmail.com>

	* tex4ht-4ht.tex (memoir.4ht): redefinition for \legend command
	* tex4ht-html4.tex (html4.4ht): default configuration for \legend

2017-02-09  Michal Hoftich  <michal.h21@gmail.com>

	* tex4ht-env.tex (tex4ht.env-unix): use one version of htf paths for 
	both Unix and Windows.

2017-02-04  Michal Hoftich  <michal.h21@gmail.com>

	* tex4ht-env.tex (tex4ht.env-win32): replaced backslashes with normal
	slashes in HTF paths on Windows 

2017-02-03  Michal Hoftich  <michal.h21@gmail.com>

	* tex4ht-env.tex (tex4ht.env-win32): fixed file paths on Windows

2017-02-01  Michal Hoftich  <michal.h21@gmail.com>

	* tex4ht-env.tex (tex4ht.env-unix, tex4ht.env-win32):
	Use dvisvgm for SVG production and dvipng for bitmap production by 
	default.

2017-01-31  Michal Hoftich  <michal.h21@gmail.com>

	* tex4ht-4ht.tex (usepackage.4ht, 
	usepackage-fontspec.4ht): New configurations for Fontspec package, 
	redefining user commands instead of internal macros. Hopefully
	it will fix LuaLaTeX and XeLaTeX issues.
	http://puszcza.gnu.org.ua/bugs/?352

2017-01-29  Karl Berry  <karl@freefriends.org>

	* common-info.tex,
	* common.tex,
	* tex4ht-fonts-4hf.tex,
	* tex4ht-info-html4.tex,
	* tex4ht-info-javahelp.tex,
	* tex4ht-info-mml.tex,
	* tex4ht-info.tex: copyright cleanups.
	
2017-01-24  Karl Berry  <karl@freefriends.org>

	* tex4ht-4ht.tex (tuenc-luatex.4ht, tuenc-xetex.4ht,
	fontspec-luatex.4ht, fontspec-xetex.4ht,
	fontspec-4ht.lua, fontspec.4ht):
	use |<TeX4ht license text|> and direct copyright lines
	for these new files, instead of various macro invocations.

2017-01-24  Michal Hoftich  <michal.h21@gmail.com>

	* tex4ht-4ht.tex (tuenc-luatex.4ht, tuenc-xetex.4ht,
	fontspec-luatex.4ht, fontspec-xetex.4ht, latex.4ht): Introduced