@@ -31,14 +31,23 @@ derived =
 
 derived += $(tex4ht_4ht_derived)
 tex4ht_4ht_derived = \
-  algorithmic.4ht biblatex.4ht book.4ht color.4ht colortbl.4ht frenchb.4ht \
+  algorithmic.4ht \
+  biblatex.4ht book.4ht \
+  color.4ht colortbl.4ht \
+  frenchb.4ht \
   fontspec.4ht fontspec-4ht.lua fontspec-luatex.4ht fontspec-xetex.4ht \
-	geometry.4ht graphics.4ht graphicx.4ht hyperref.4ht latex.4ht lettrine.4ht \
-	listings.4ht  memoir.4ht multicol.4ht multirow.4ht nameref.4ht quoting.4ht \
-	reading.4ht scrartcl.4ht scrbook.4ht scrreprt.4ht spanish.4ht subscript.4ht \
-	titlesec.4ht tocloft.4ht tuenc-luatex.4ht tuenc-xetex.4ht \
-  usepackage.4ht usepackage-fontspec.4ht wrapfig.4ht xcolor.4ht  xr.4ht \
-	xr-hyper.4ht 
+  geometry.4ht graphics.4ht graphicx.4ht \
+  hyperref.4ht \
+  latex.4ht lettrine.4ht listings.4ht \
+  memoir.4ht multicol.4ht multirow.4ht \
+  nameref.4ht \
+  quoting.4ht \
+  reading.4ht \
+  scrartcl.4ht scrbook.4ht scrreprt.4ht spanish.4ht subscript.4ht \
+  titlesec.4ht tocloft.4ht tuenc-luatex.4ht tuenc-xetex.4ht \
+  usepackage.4ht usepackage-fontspec.4ht \
+  wrapfig.4ht \
+  xcolor.4ht xr.4ht xr-hyper.4ht 
 	
 # xx and many, many more.
 
