@@ -24337,9 +24337,8 @@ Redefines \Verb+\psfig+ in terms of \Verb+\includegraphics+ of graphicx.
 graphics.sty\EndLink.
 
 \<graphics.4ht\><<<
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%  
-% graphics.4ht                          |version %
-% Copyright (C) |CopyYear.1997.       Eitan M. Gurari         %
+% graphics.4ht (|version), generated from |jobname.tex
+% Copyright |CopyYear.1997. Eitan M. Gurari
 |<TeX4ht copyright|>
 
    |<fix graphics|>
