@@ -1,8 +1,14 @@
+2017-03-13  Karl Berry  <karl@freefriends.org>
+
+	* Makefile (tex4ht_4ht_derived): spread out by first letter.
+
+	* tex4ht-4ht.tex (graphics.4ht): copyright.
+
 2017-03-11  Michal Hoftich  <michal.h21@gmail.com>
 
 	* tex4ht-html4.tex (html4.4ht), 
 	* tex4ht-4ht.tex (graphics.4ht): Fixed support for images with spaces
-	in their filenames
+	in their filenames.
 
 2017-03-11  Michal Hoftich  <michal.h21@gmail.com>
 
